2009-01-22 yusei
* Added bank_account_type category and use it in BankAccount_view.

2008-12-17 nicolas
* add Day Movement Group portal_type

2008-12-02 rafael
* Disable Acquire Local Roles in Credit Cards (as done in Bank Account)

2008-11-13 yusei
* Start to develop version 5.4.

2008-11-06 fabien
* fix some problems in Base_viewLocalPermissionList view (replace id with title in the listbox, make title not editable and remove reference because it's not used everywhere)

2008-10-28 yusei
* Product Interest field is now translatable.

2008-10-14 yusei
* Start to develop version 5.3.

2008-09-24 yusei
* Update xml format.

2008-09-16 Kazuhiko
* move Divergence Tester, Delivery Builder, Delivery Tool, Order Builder, Order Tool, delivery_causality_interaction_workflow, delivery_causality_workflow, delivery_movement_causality_interaction_workflow, delivery_movement_simulation_interaction_workflow, delivery_simulation_interaction_workflow, order_movement_simulation_interaction_workflow, order_simulation_interaction_workflow and simulation_movement_causality_interaction_workflow from erp5_core to erp5_base.
* Make delivery_causality_workflow generic and enable partial solving of divergence and partial splitting.

2008-09-07
* Update English messages.

2008-09-04 yusei
* Fixed workflow title.
* Update English messages.

2008-08-29 yusei
* Correct messge text.

2008-08-28 yusei
* Use Base_translateString or translateString instead of N_ for translation message.

2008-08-15 jerome
* Expose creation_date in Delivery_getODTDataDict

2008-08-07 yusei
* Added proxy role to NotificationTool_getDocumentValue, otherwise Anonymous use can't use notification message.
* Updated notification_message_workflow and allow modification even if state is submitted or validated.

2008-08-05 yusei
* Remove subject field from NotificationMessage_view. It was useless.

2008-08-04 yusei
* Remove text_content field from NotificationMessage_view. It was useless.

2008-08-04 yusei