@@ -31,6 +31,7 @@
   <item>Quantity Sign Movement Group</item>
   <item>Day Movement Group</item>
   <item>Requirement Movement Group</item>
+  <item>Monthly Range Movement Group</item>
   <item>Causality Assignment Movement Group</item>
   <item>Split Movement Group</item>
  </portal_type>
