@@ -9,6 +9,7 @@ Delivery Builder | Causality Assignment Movement Group
 Delivery Builder | Causality Movement Group
 Delivery Builder | Day Movement Group
 Delivery Builder | Delivery Causality Assignment Movement Group
+Delivery Builder | Monthly Range Movement Group
 Delivery Builder | Order Movement Group
 Delivery Builder | Parent Explanation Movement Group
 Delivery Builder | Predicate
