@@ -24,6 +24,7 @@ Fax
 File
 Image
 Link
+Monthly Range Movement Group
 Notification Message
 Notification Message Module
 Order Builder
